Changelog
=========

1.2.1 (unreleased)
------------------

- Nothing changed yet.


1.2.0 (2018-07-17)
------------------

- Add plone.restapi endpoint for login.
  [buchi]

- Add Plone 5 compatibility. [phgross]


1.1.0 (2016-10-13)
------------------

- Handle login similar to PlonePAS (fire login events,
  expire clipboard, create member area and set login times).
  [phgross]

- Avoid having the `ticket` param end up in the browser address bar by
  stripping it from the service_url, and redirecting to the service_url
  after extracting credentials (i.e., a ticket) from the request.
  [lgraf]


1.0.0 (2015-11-25)
------------------

- Initial release.
  [buchi]