@@ -4,7 +4,8 @@ Changelog
 1.2.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Handle login similar to PlonePAS (fire login events, expire clipboard,
+  create member area and set login times) in @caslogin endpoint. [tinagerber]
 
 
 1.2.0 (2018-07-17)
